fix(per-forum-stats): adapt styles to the wider legend
With the addition of "Community guides" to the chart we now have a wider
legend, which messed up some of the styles of the per-forum stats
components.

--- a/src/static/css/extrainfo_perforumstats.css
+++ b/src/static/css/extrainfo_perforumstats.css
@@ -32,7 +32,7 @@
   }
 }
 
-@media (min-width: 37.5rem) and (max-width: 900px) {
+@media (min-width: 37.5rem) and (max-width: 1250px) {
   .TWPT-scTailwindSharedActivitychartroot .scTailwindSharedActivitychartchart {
     margin-top: 54px;
   }
